2005-06-01 14:13 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridCollapseInvalidCells) attempt to collapse
	cell and neighbors. added stuff to dump out mesh after validation
	if sucessful.

2005-06-01 09:58 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSurfaceNodeConstrained) are nodes always
	constrained to surface?
	* src/grid.c (gridConstrainSurfaceNode,gridUnconstrainSurfaceNode) 
	turn node surface constraint on and off.
	* src/gridinsert.c (gridSplitEdgeRatio, gridCollapseEdge) project
	surface nodes if gridSurfaceNodeConstrained. Note that this needs
	to be changed to an evaluation with consistent passed to queue.
	* src/unit_main.c turn on gridConstrainSurfaceNode.
	
2005-06-01 08:35 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridCollapseInvalidCells) attempt to remove invalid
	cells with edge collpase, but not useful for om6.

2005-05-31 15:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) use nface as loop bound.
	* src/gridshape.c (gridWriteTecplotCurvedGeom) debuged. looks resonable.

2005-05-31 17:05 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridWriteTecplotCurvedGeom) fleshed out, untested.

2005-05-31 15:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) fixed f2n int declaration.
	* src/gridshape.c (gridWriteTecplotCurvedGeom) created nonfunctional
	stub for implementation in progress.

2005-05-31 12:50 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) dump arrays to tecplot file.

2005-05-29 15:35 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridNumberOfInvalidCells) count invalid cells and
	swap to fix (about half).

2005-05-29 14:33 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) removed to fix gridmetric depend.
	* src/gridmetric.c (gridWriteTecplotInvalid) added (requires gridAR).

2005-05-29 14:25 Mike Park  <mike.park@nasa.gov>
